[package]
authors = ["Thomas Sieverding <Thomas@bajix.com>"]
edition = "2018"
name = "booter"
version = "1.1.0"
description = "A simple solution to register and call one-time initialization functions"
readme = "README.md"
license = "MIT"
repository = "https://github.com/Bajix/booter-rs/"
keywords = ["initialization"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic-take = "1.0.0"
inventory = "0.1.10"
